# skin-care-companion

./: .env.example  .gitignore  AGENTS.md  README.md  coderabbit.yaml
.steering/001_make_mvp/: STEER.md
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  main.py  models.py
apps/api/app/db/: database.py  repository.py  schema.sql  seed.sql
apps/api/app/rag/: __init__.py  base.py  sqlite_retriever.py
apps/api/app/recommendation/: __init__.py  service.py
apps/api/app/youcam/: __init__.py  base.py  factory.py  mock.py  real.py
apps/api/tests/: test_api_endpoints.py  test_recommendation.py
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/kotlin/app/skincompanion/skin_care_companion/: MainActivity.kt
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
docs/: design-memo.md  zenn-draft.md
docs/steering/: STEER-001-skin-care-companion-mvp.md
skills/skin-care-companion-mvp/: SKILL.md
skills/skin-care-companion-mvp/agents/: openai.yaml
